# server/controllers/React_db/AttributeController.js
@@ -1,0 +1,59 @@
+import AttributeControllerGenerated from "./generated/AttributeControllerGenerated";
+
+// Properties
+import Properties from "../../properties";
+
+// Database
+import AttributeModel from "../../models/React_db/AttributeModel";
+
+// Security
+import { authorize } from "../../security/SecurityManager";
+
+// Errors
+import Errors from "../../classes/Errors";
+import ErrorManager from "../../classes/ErrorManager";
+
+const customControllers = {
+  
+  /**
+   * Override here your custom routes
+   * EXAMPLE:
+   *
+    
+   init: router => {
+     const baseUrl = `${Properties.api}/attribute`;
+     
+     // custom route
+     router.get(baseUrl + "/:id", customControllers.get);
+     
+     // Init super
+     AttributeControllerGenerated.init(router);
+    },
+
+  */
+
+  /**
+   * Override here your custom controllers
+   * EXAMPLE:
+   *
+   
+    get: async (req, res) => {
+      try {
+        console.log("This is my custom controller");
+        const result = await AttributeModel.get(req.params.id);
+        res.json(result);
+      } catch (err) {
+        const safeErr = ErrorManager.getSafeError(err);
+        res.status(safeErr.status).json(safeErr);
+      }
+    }
+
+   */
+   
+};
+
+export default {
+  ...AttributeControllerGenerated,
+  ...customControllers
+};
+
