# server/controllers/React_db/generated/CategoryControllerGenerated.js
@@ -1,0 +1,76 @@
+/**
+ * 
+ * 
+  _____                      _              _ _ _     _   _     _        __ _ _      
+ |  __ \                    | |            | (_) |   | | | |   (_)      / _(_) |     
+ | |  | | ___    _ __   ___ | |_    ___  __| |_| |_  | |_| |__  _ ___  | |_ _| | ___ 
+ | |  | |/ _ \  | '_ \ / _ \| __|  / _ \/ _` | | __| | __| '_ \| / __| |  _| | |/ _ \
+ | |__| | (_) | | | | | (_) | |_  |  __/ (_| | | |_  | |_| | | | \__ \ | | | | |  __/
+ |_____/ \___/  |_| |_|\___/ \__|  \___|\__,_|_|\__|  \__|_| |_|_|___/ |_| |_|_|\___|
+ 
+ * DO NOT EDIT THIS FILE!! 
+ * 
+ *  TO CUSTOMIZE CategoryControllerGenerated.js PLEASE EDIT ../CategoryController.js
+ * 
+ *  -- THIS FILE WILL BE OVERWRITTEN ON THE NEXT SKAFFOLDER'S CODE GENERATION --
+ * 
+ */
+import Properties from "../../../properties";
+import CategoryModel from "../../../models/React_db/CategoryModel";
+import ErrorManager from "../../../classes/ErrorManager";
+import { authorize } from "../../../security/SecurityManager";
+import CategoryController from "../CategoryController";
+
+const generatedControllers = {
+  /**
+   * Init routes
+   */
+  init: router => {
+    const baseUrl = `${Properties.api}/category`;
+    router.get(baseUrl + "/:id", authorize([]), CategoryController.get);
+    router.get(baseUrl + "", authorize([]), CategoryController.list);
+  },
+
+
+  // CRUD METHODS
+
+
+  /**
+  * CategoryModel.get
+  *   @description CRUD ACTION get
+  *   @returns Category
+  *
+  */
+  get: async (req, res) => {
+    try {
+      const result = await CategoryModel.get(req.params.id);
+      res.json(result);
+    } catch (err) {
+      const safeErr = ErrorManager.getSafeError(err);
+      res.status(safeErr.status).json(safeErr);
+    }
+  },
+  
+  /**
+  * CategoryModel.list
+  *   @description CRUD ACTION list
+  *   @returns ARRAY OF Category
+  *
+  */
+  list: async (req, res) => {
+    try {
+      const result = await CategoryModel.list();
+      res.json(result);
+    } catch (err) {
+      const safeErr = ErrorManager.getSafeError(err);
+      res.status(safeErr.status).json(safeErr);
+    }
+  },
+  
+  
+  
+  // Custom APIs
+
+};
+
+export default generatedControllers;
